@@ -8,7 +8,7 @@
 # Copyright (c) 2001 by ActiveState Tool Corp.
 # All rights reserved.
 #
-# RCS: @(#) $Id: md5x.test,v 1.9 2005/02/17 21:58:01 patthoyts Exp $
+# RCS: @(#) $Id: md5x.test,v 1.10 2005/02/20 12:16:47 patthoyts Exp $
 
 # -------------------------------------------------------------------------
 # Initialize the test package
@@ -173,36 +173,94 @@ if {$::md5::usetrf || $::md5::usemd5c} {
 }
 
 # -------------------------------------------------------------------------
+# RFC 2202 has a set of test vectors for HMAC-MD5 and HMAC-SHA1.
+# This is those test vectors...
+# -------------------------------------------------------------------------
 
-test md5-5.1 {Check hashing data that begins with hyphen} {
+set vectors \
+    [list \
+         1 [string repeat \x0b 16] "Hi There" \
+         9294727A3638BB1C13F48EF8158BFC9D \
+         2 "Jefe" "what do ya want for nothing?" \
+         750C783E6AB0B503EAA86E310A5DB738 \
+         3 [string repeat \xaa 16] [string repeat \xdd 50] \
+         56BE34521D144C88DBB8C733F0E8B3F6 \
+         4 \
+         [binary format H* 0102030405060708090a0b0c0d0e0f10111213141516171819]\
+         [string repeat \xcd 50] \
+         697EAF0ACA3A3AEA3A75164746FFAA79 \
+         5 [string repeat \x0c 16] "Test With Truncation" \
+         56461EF2342EDC00F9BAB995690EFD4C \
+         6 [string repeat \xaa 80] \
+         "Test Using Larger Than Block-Size Key - Hash Key First" \
+         6B1AB7FE4BD7BF8F0B62E6CE61B9D0CD \
+         7 [string repeat \xaa 80] \
+         "Test Using Larger Than Block-Size Key and Larger Than One Block-Size Data" \
+         6F630FAD67CDA0EE1FB1F562DB3AA53E \
+        ]
+foreach {n key msg hash} $vectors {
+    test md5-5.$n {RFC2202 test vectors for HMAC-MD5} {
+        ::md5::hmac -hex -key $key -- $msg
+    } $hash
+}
+
+if {$::md5::usemd5c} {
+    if {![catch {package require Trf}]} {
+        set ::md5::usetrf 1
+        set ::md5::usemd5c 0
+        foreach {n key msg hash} $vectors {
+            test md5-trf-5.$n {RFC2202 test vectors for HMAC-MD5 (trf impl)} {
+                ::md5::hmac -hex -key $key -- $msg
+            } $hash
+        }        
+        set ::md5::usetrf $preserve(usetrf)
+        set ::md5::usemd5c $preserve(usemd5c)
+    }
+}
+
+if {$::md5::usetrf || $::md5::usemd5c} {
+    set ::md5::usetrf 0
+    set ::md5::usemd5c 0
+    foreach {n key msg hash} $vectors {
+        test md5-tcl-5.$n {RFC2202 test vectors for HMAC-MD5 (tcl impl)} {
+            ::md5::hmac -hex -key $key -- $msg
+        } $hash
+    }
+    set ::md5::usetrf $preserve(usetrf)
+    set ::md5::usemd5c $preserve(usemd5c)
+}
+
+# -------------------------------------------------------------------------
+
+test md5-6.1 {Check hashing data that begins with hyphen} {
     list [catch {::md5::md5 -hex -hello} msg] $msg
 } {0 110CD19610AD6247F30263C882670CC1}
 
-test md5-5.2 {Check hashing data that begins with hyphen} {
+test md5-6.2 {Check hashing data that begins with hyphen} {
     list [catch {::md5::md5 -hex -- -hello} msg] $msg
 } {0 110CD19610AD6247F30263C882670CC1}
 
-test md5-5.3 {Check hashing data that begins with hyphen} {
+test md5-6.3 {Check hashing data that begins with hyphen} {
     list [catch {::md5::md5 -hex --} msg] $msg
 } {0 CFAB1BA8C67C7C838DB98D666F02A132}
 
-test md5-5.4 {Check hashing data that begins with hyphen} {
+test md5-6.4 {Check hashing data that begins with hyphen} {
     list [catch {::md5::md5 -hex -- --} msg] $msg
 } {0 CFAB1BA8C67C7C838DB98D666F02A132}
 
-test md5-6.1 {Check hmac data that begins with hyphen} {
+test md5-7.1 {Check hmac data that begins with hyphen} {
     list [catch {::md5::hmac -hex -key "" -hello} msg] $msg
 } {0 6C39C49DA482D110B72B72F24E082E0F}
 
-test md5-6.2 {Check hmac data that begins with hyphen} {
+test md5-7.2 {Check hmac data that begins with hyphen} {
     list [catch {::md5::hmac -hex -key "" -- -hello} msg] $msg
 } {0 6C39C49DA482D110B72B72F24E082E0F}
 
-test md5-6.3 {Check hmac data that begins with hyphen} {
+test md5-7.3 {Check hmac data that begins with hyphen} {
     list [catch {::md5::hmac -hex -key "" --} msg] $msg
 } {0 8EB61D377088779210AD82659AECD631}
 
-test md5-6.4 {Check hmac data that begins with hyphen} {
+test md5-7.4 {Check hmac data that begins with hyphen} {
     list [catch {::md5::hmac -hex -key "" -- --} msg] $msg
 } {0 8EB61D377088779210AD82659AECD631}
 
